<resources>
    <string name="app_name">TechJalsa</string>
    <string name="map">Maps</string>
    <string name="call">Call Coordinator</string>
    <string name="game">Game</string>
    <string name="share_app">Share</string>
    <string name="aboutus">About Us</string>
    <string name="dayOne">25<sup>th</sup></string>
    <string name="dayTwo">26<sup>th</sup></string>
    <string name="dayThree">27<sup>th</sup></string>
    <string name="dayFour">28<sup>th</sup></string>
    <string name="vol_five">Akshat Bordia</string>
    <string name="vol_five_no">7877097467</string>
    <string name="vol_six">Ronak Murdia</string>
    <string name="vol_six_no">7737787368</string>
    <string name="vol_sev">Rohan Sen</string>
    <string name="vol_sev_no">8769294330</string>
    <string name="vol_one_name">Gaurav Kumawat - faculty</string>
    <string name="vol_one_no">8696932741</string>
    <string name="vol_two">Sandeep Upadhyay - faculty</string>
    <string name="vol_two_no">8696932745</string>
    <string name="vol_three">Sayyed Faiz Ahmed</string>
    <string name="vol_three_no">9694691438</string>
    <string name="vol_egt">Dakshay Bhagtani</string>
    <string name="vol_egt_no">9414314009</string>
    <string name="vol_nin">Mohd. Saif</string>
    <string name="vol_nin_no">8890974509</string>
    <string name="vol_ten">Harshvardhan Chittora</string>
    <string name="vol_ten_no">9460382689</string>
    <string name="game_start">Start</string>
    <string name="game_name">Catch The Ball</string>
    <string name="ten_points">10 Points</string>
    <string name="fv_points">5 Points</string>
    <string name="game_over">Game Over</string>
    <string name="score">Score : </string>
    <string name="tap_to_start">Tap to Start</string>
    <string name="try_again">Try Again</string>
    <string name="high_score">High Score : </string>
    <string name="ok">OK</string>
    <string name="description">Description</string>
    <string-array name="start">
        <item>Inaugral Function with plantation</item>
        <item>11:00AM-11:30AM</item>
        <item>Techno Circle</item>
        <item>Tech Jalsa is the annual Technical and Cultural event of Techno India NJR Institute of Technology.
\n\nThe moment to put the course books aside and swinging back into our fun-modes. Techno India NJR invites you to \'TechJalsa 2K17\' the inter university technical festival. Ranging from bridge-making to face-painting, from extempore to paper presentations, from fashion show to roadies, TechJalsa 2K17 provides the ultimate 4 days of fun in March 2017.
\n\nSo pack your bags, load your passions and land up to Techno India NJR and have all the fun you had been waiting for.</item>
    </string-array>
    <string-array name="setu">
        <item>Setu(Bridge Making)</item>
        <item>11:30AM-1:30PM</item>
        <item>Workshop</item>
        <item>Fee - 100\nFirst Prize - 500\nSecond Prize - 300
\n\n1.Bridge Material Kits: Each bridge material kit consists of 200 numbers of Popsicle sticks, one bottle of fevicol, cutter, pins and rules sheet.
\n\n2.Construction of Model Bridges: Only wooden popsicle sticks, fevicol and pins can be used to construct the bridges. No other materials are permitted. The wooden sticks can be cut to fit as desired. The amount of sticks and fevicol used in the bridge is limited only by the dimensions restrictions.
\n\n3.Please note the following when you design and build your bridge: During the strength test of the bridge, one horizontal metal bar will be placed along the road deck of the bridge, at the center of the bridge. The weight on the bar will be hung using a hook. By placing the bar across the road deck in this manner, we ensure that the truss members of the bridge are stressed during the strength test. The builder of the model bridge shall ensure that there is one 2cm x 2cm opening through the center of the road deck of the bridge, to accommodate the vertical bar. Bridges should be built to ensure that the region underneath the horizontal bar is properly reinforced to distribute the force applied during the test.
\n\n4.During the test, the bridge will rest on two tables placed exactly 50cm apart. These tables are loose and will resist the downward force applied to the bridge. The tables will not resist any sideways force exerted on them. Therefore ‘arch’ style bridges, which normally require an inward force on the ends of the arch for proper support, will not perform well in this competition.
\n\n5.Dimensions of the bridge: The length of the bridge must be between 60cm and 70cm at its base. This is critical and the bridge will be disqualified if it is shorter than 60cm and will be penalized if it is longer than 70cm at the base. The road surface of the bridge can be curved, if desired, but must be at least 6cm wide along its entire length. The road surface is that part of the bridge deck available to be used by a model car travelling over the bridge. The road must be sufficiently smooth and continuously to allow a small model car to travel. The overall width of the bridge shall not exceeded 15cm. This is critical and the bridge will be penalized if it is wider than 15cm. The overall height of the bridge shall not exceeded 15cm. Overall height means from lowest point to highest point. This is critical and the bridge will be penalized if it is higher than 15cm.
\n\n6.How to accumulate points in the competition:
\n\u2022 Keep the glued joints clean and trimmed. At the joints, be sure to overlap the sticks and wipe off excess glue.
\n\u2022 Edges that are intended to be parallel should look parallel.
\n\u2022 Keep the structure symmetrical.
\n\u2022 Try to use some artistic imagination.
\n\u2022 Try to use engineering principles, to transfer the force from the middle of the bridge to its supports.
\n\u2022 Comply with the Dimensions restrictions to avoid penalties.
\n\n7. Penalties:
\n\u2022 2 points will be deducted for each 1cm from the score if the bridge is longer than 70 cm at the base.
\n\u2022 5 points will be deducted for each 1cm (or partition thereof) that the bridge’s height exceeds 15cm.
\n\u2022 1 point will be deducted for each 1cm that the bridge’s width exceeds 15cm.
\n\n8. Ground for Disqualification:
\n\u2022 Entries will be disqualified if they use any material other than provided.
\n\u2022 Entries will be disqualified if the bridge length is shorter than 60cm.
\n\u2022 Entries will be disqualified if there is evidence of heat treating (baking etc.)
\n\n9. Labeling: All finished bridges are to be labeled or identified by putting their Team name.
\n\n10. Judging &amp; Testing of bridges: The judging of the bridges is comprised of 4 main areas:
\n\u2022 Quality of Construction (10 points maximum)
\n\u2022 Application of Engineering Principles (20 points maximum)
\n\u2022 Aesthetics (10 points maximum)
\n\u2022 Strength (60 points maximum)
\n\n11. The strength factor will be computed using the formula: Strength Factor (SF) = (Applied Force)/(Mass of Bridge)2 The bridge with the highest strength factor will be given a score of 60. All other bridge entries within the category will be given a score less than 60, based on the ratio of their strength factor score to the highest strength factor score. The score will be calculated as Final Score = [(SFi)/(SF max)]x60
\n\n12. The ‘ Quality of Construction’, ‘application of Engineering Principles’ and ‘Aesthetics’ aspects of the competition will judge the model bridge on bridge build quality, good engineering design and whether the bridge has artistic merit.
\n\n13. A bridge is considered to fail when it breaks or sags more than 9cm.</item>
    </string-array>
    <string-array name="tekken">
        <item>Takken 5</item>
        <item>11:30AM-1:30PM</item>
        <item>I-Car 1</item>
        <item>Fee - 50\nFirst Prize - 500\nSecond Prize - 300
\n\n1. The game will be 1vs1 arcade mode.
\n\n2. Match duration will be 60 seconds for a round.
\n\n3. Best of 3 rounds will qualify for the next round.
\n\n4. Players are provided with a standard keyboard and mouse. Other Controllers are allowed.
\n\n5. There will be no customizing colors, names or items at any time before or during a tournament match. Any player that does so will be given a loss.
\n\n6. Stage will be selected randomly.
\n\n7. The tournament organizers reserve the right to cancel or modify the tournament rules if technical failures or any other factor beyond reasonable control, impairs the integrity of the tournament.</item>
    </string-array>
    <string-array name="onset">
        <item>OnSet(StartUp Idea Competition)</item>
        <item>11:30AM-1:00PM</item>
        <item>Board Room</item>
        <item>Fee - 100\nFirst Prize - 500\nSecond Prize - 300
\n\n1. The objective of the event is to provide ambitious students with an invaluable opportunity to showcase their B – plans in front of college administration. This will give them a clear picture of the feasibility of their ideas. The event will lay a foundation for interesting ideas focused on building innovation driven start-ups. The idea of “” is to make a significant effort towards the identification of right markets, building right products, securing initial partners and customers for startups apart from giving the participants a chance to relook at their idea.
\n\n2. Criteria Team size:
\n\u2022 Team of 1 - 3 members
\n\u2022 Write ups to be sent at https://goo.gl/forms/FXaEag9Bkrx5Qd0H2
\n\u2022 The start-up up plan that is expected in the first stage of the competition should be detailed.
\n\n3. Following are the four aspects that shall be looked into for judgment.
\n\u2022 The problem statement
\n\u2022 The core idea: Solutions
\n\u2022 Marketing strategy: Pitching Strategy / Value proposition
\n\u2022 Financials: Investments plans
\n\n4. The process shall be held as a two-stage process:
\n\u2022 Functional Prototype
\n\u2022 The first stage of the process involves participants sending in their start-up plan summaries to the official e-mail address (techjalsa@technonjr.org) by 7th of march 2017.
\n\u2022 The start-up plan should be extensive in regards to explaining everything regarding the idea.
\n\u2022 The finalists shall be announced on 8th march 2017.
\n\n5. PPT - Pitching Session
\n\u2022 This round shall be a presentation round in front of the jury and requires the participants to come down to the institute.
\n\n\nRULES
\n\u2022 This event is open for all.
\n\u2022 Round 1 is a prototyping round.
\n\u2022 The Second Round would happen at Techno India NJR Institute of Technology.
\n\u2022 The Summary should not exceed 5 Pages.
\n\u2022 Winners would be declared on the basis of Round 2.
\n\u2022 The Jury’s decision would be final and binding on all the participants.</item>
    </string-array>
    <string-array name="story">
        <item>Jigsaw Story Writing</item>
        <item>11:30AM-12:30PM</item>
        <item>Language Lab</item>
        <item>Fee - 50\nFirst Prize - 500\nSecond Prize - 300
\n\n1. Solo entry based event.
\n\n2. The words will be given on the spot.
\n\n3. The time limit allotted will be 30 mins.
</item>
    </string-array>
    <string-array name="avatar">
        <item>Avatar(Face Painting)</item>
        <item>12:30PM-2:00PM</item>
        <item>Common Area</item>
        <item>Fee - 50\nFirst Prize - 500\nSecond Prize - 300
\n\n1. Solo entry based event.
\n\n2. Colours will be provided by college. No participant is allowed to add more colours on itself.
\n\n3. Only 1 face is to be painted in two hours.
\n\n4. The partner should be with the participant.
\n\n5. There should be a message/ theme behind the painted face.</item>
    </string-array>
</resources>